[project]
name = "llm-context-playground"
version = "0.1.0"
description = "LLM API context management strategies playground."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.99.0"]
dev = ["pytest>=9.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
